# mgr

./: .clang-format  .gitignore  .travis.yml  CMakeLists.common  CMakeLists.txt
Gui/: Gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Kernels/: Kernels.cl  Kernels3d.cl
Tests/: CMakeLists.txt
Tests/ProcessingImages/: ProcessingImages.pro  tst_processingimagestest.cpp
scripts/: convertDicomToJpg.sh  convertToRaw.sh  format.sh  rename.sh
src/: Application.cpp  ApplicationManager.cpp  ApplicationManager.h  CMakeLists.txt  ContinuousProcessingMananger.cpp  ContinuousProcessingMananger.h  CpuSkeletonize.cpp  CpuSkeletonize.h  FileVideo.cpp  FileVideo.h  IImageSource.h  Image3d.cpp  Image3d.h  Kernels.cl  Logger.cpp  Logger.h  Normalization.cpp  Normalization.h  OpenCLManager.cpp  OpenCLManager.h  Paths.h.in  Processing3dImage.cpp  Processing3dImage.h  ProcessingImage.cpp  ProcessingImage.h  ProcessingImage3d.cpp  ProcessingImage3d.h  SourceFactory.h  csvFileUtils.cpp  csvFileUtils.h  cvImageWindow.cpp  cvImageWindow.h
src/GUI/: ApplicationManagerGUI.cpp  ApplicationManagerGUI.h  VTKData.cpp  VTKData.h  cvImageWindow.cpp  cvImageWindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  vtkview.cpp  vtkview.h  vtkview.ui  wxImagesProcessing.cpp  wxImagesProcessing.fbp  wxImagesProcessing.h
src/ImageSource/: Camera.cpp  Camera.h  Directory.cpp  Directory.h  FileVideo.cpp  FileVideo.h  IImageSource.h  SourceFactory.h
